--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,3 +6,8 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+ethers = "1.0.2"
+rustc-hex = "2.1.0"
+serde = "1.0.152"
+serde_json = "1.0.93"
+tokio = { version = "1", features = ["full"] }
